Sidebar no longer has extra space at bottom.

--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -12,7 +12,7 @@ div.sidebar {
 
 
 div.iconbar {
-    height: 7vh;
+    height: 8vh;
     width: 100%;
     
     
@@ -24,8 +24,7 @@ div.iconbar {
 }
 
 div.noteContainer {
-    height: 85vh;
-    
+    height: 92vh;
 }
 
 ::-webkit-scrollbar {
